# kobold

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  gdb.txt  meson.build  todo
.cargo/: config.toml
include/: cpu.h  filesystem.h  kmain.h  memory.h  sys.h
include/arch/x86_64/: cpu.h  dev.h  mm.h  serial.h  time.h
res/include/: log.h  spinlock.h
res/include/arch/x86_64/: cpu.h  panic.h
res/include/arch/x86_64/drivers/: serial.h
res/linker/: linker-x86_64.ld
scripts/: build.sh  makeImage.py  setupenv.sh
src/: kmain.c  log.c  main.rs
src/arch/x86_64/: boot.c  boot.rs  mod.rs  printf.c  serial.c  time.c
src/arch/x86_64/cpu/: acpi.c  cpuid.c  fpu.c  gdt.c  gdt.rs  gdt.s  idt.c  idt.rs  idt.s  init.c  interrupts.c  isr.rs  isr.s  isr_stubs.s  mmu.c  mod.rs  pci.c  stack.s  time.c
src/arch/x86_64/dev/: acpi.c  mod.rs  pci.c  qemu-debug.c  qemu_debug.rs
src/arch/x86_64/drivers/: serial.c
src/arch/x86_64/mm/: alloc.c  pmm.c  vmm-rewrite.c  vmm.c
src/cpu/: init.c  interrupts.c
src/filesystem/: devfs.c  vfs.c
src/memory/: alloc.c  physical.c  virtual.c
src/sys/: defferedWork.c  list.c
subprojects/libk/: meson.build
subprojects/libk/include/x86_64/include/: limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdlib.h  string.h
subprojects/libk/include/x86_64/include/sys/: cdefs.h
subprojects/libk/src/arch/x86_64/stdlib/: abort.c
subprojects/libk/src/arch/x86_64/string/: memchr.c  memcpy.c  memmove.c  memset.c  stpcpy.c  stpncpy.c  strchr.c  strcoll.c  strcpy.c  strcspn.c  strdup.c  strlen.c  strncpy.c  strpbrk.c  strrchr.c  strstr.c  strxfrm.c
