[package]
name = "kobold"
version = "0.1.0"
authors = ["Liam Greenway <liamgr33nway@gmail.com>"]
edition = "2024"

[dependencies]
limine = "0.5"
modular-bitfield = "0.12.0"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "kobold"
test = false
bench = false